stderr
JudgeMan.java:11: error: variable declaration not allowed here
        int pairStack = 0;
            ^
1 error
